Fixed layout bug and redid register and login layout

--- a/opinion-app/src/App.css
+++ b/opinion-app/src/App.css
@@ -164,7 +164,6 @@ footer {
 
 #content-container {
   width: 100%;
-  max-width: 1300px;
   height: 100%;
   overflow: hidden;
 }
